# dravis-flow

./: .gitignore  CLAUDE.md  README.md  SPEC.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: index.html  main.js  setup.js  style.css  widget.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_setup.rs  audio.rs  commands.rs  config.rs  formatter.rs  hotkey.rs  injector.rs  lib.rs  main.rs  pipeline.rs  prompt.rs  state.rs  whisper.rs
