[package]
name = "dravis-flow"
version = "0.1.0"
description = "DraVis Flow local voice-to-text"
authors = ["Davi Holanda"]
edition = "2021"

[lib]
name = "dravis_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
whisper-rs = { version = "0.13", features = ["metal"] }
cpal = "0.15"
arboard = "3"
enigo = "0.2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-global-shortcut = "2.3.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
